--- a/views/event_list.pug
+++ b/views/event_list.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div.w3-container.w3-padding-32
-    h1.w3-center All Events
+    h1.w3-center(style= 'font-weight: bold;') All Events
 
     // Create a flex container for the search bar with three sections
     div(style='display: flex; justify-content: space-between; gap: 10px; max-width: 800px; margin: 0 auto;')
