event_list en profiel etc kleine detail met overflow
game list zelfde stijl als in event_list gemaakt

footer gefixt

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -107,6 +107,7 @@ html(lang='en')
                 display: flex;
                 align-items: center; /* Center items vertically */
                 justify-content: center; /* Align items to the right */
+                position: relative;
 
             }
 
