--- a/views/event_list.pug
+++ b/views/event_list.pug
@@ -1,6 +1,13 @@
 extends layout
 
 block content
+  style.
+    .w3-card-4 h3 {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
   div.w3-container.w3-padding-32
     h1.w3-center(style= 'font-weight: bold;') All Events
 
@@ -30,32 +37,32 @@ block content
     if event_list && event_list.length
       ul(style='list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;')
         each event in event_list
-          li.w3-card-4.w3-padding.w3-round-large(style='border: 1px solid #ddd; list-style: none; transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;')
-            h3.w3-text-blue.w3-hover-text-light-blue(style='font-size: 1.5rem; font-weight: bold;')
-              a(href=event.url) #{event.title}
-            p(style='margin: 0; font-size: 1rem;')
-              b Game:
-              span #{event.game.name}
-            if event.date
+          a(href=event.url style='text-decoration: none; color: inherit;')
+            li.w3-card-4.w3-padding.w3-round-large(style='border: 1px solid #ddd; list-style: none; transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;')
+              h3.w3-text-blue(style='font-size: 1.5rem; font-weight: bold;') #{event.title}
               p(style='margin: 0; font-size: 1rem;')
-                b Date:
-                span #{event.date.toDateString()}
-            else
-              p(style='margin: 0; font-size: 1rem;')
-                b Date:
-                span Not specified
-
-            p(style='margin: 0; font-size: 1rem;')
-              if event.status === 'Available'
-                span.w3-text-green
-                  b Available:
-                  | #{event.participants.length} / #{event.max_size}
-              else if event.status === 'Full'
-                span.w3-text-red
-                  b Full:
-                  | #{event.participants.length} / #{event.max_size}
+                b Game:
+                span #{event.game.name}
+              if event.date
+                p(style='margin: 0; font-size: 1rem;')
+                  b Date:
+                  span #{event.date.toDateString()}
               else
-                span.w3-text-orange #{event.status}
+                p(style='margin: 0; font-size: 1rem;')
+                  b Date:
+                  span Not specified
+
+              p(style='margin: 0; font-size: 1rem;')
+                if event.status === 'Available'
+                  span.w3-text-green
+                    b Available:
+                    | #{event.participants.length} / #{event.max_size}
+                else if event.status === 'Full'
+                  span.w3-text-red
+                    b Full:
+                    | #{event.participants.length} / #{event.max_size}
+                else
+                  span.w3-text-orange #{event.status}
     else
       p.w3-text-gray(style='text-align: center; font-size: 1.2rem; margin-top: 20px;') No events found.
 
