--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -8,16 +8,33 @@ block content
     ul#game-list(style='list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;')
       each game in game_list
         li.w3-card-4.w3-padding.w3-round-large.game-item(style='border: 1px solid #ddd; list-style: none; transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;')
-          h3.w3-text-blue(style='font-size: 1.5rem; font-weight: bold;')
-            a(href=game.url) #{game.name}
-          p(style='margin: 0; font-size: 1rem;')
-            b Open Events:
-            span #{game.openEventCount}
+          a(href=game.url style='display: block; text-decoration: none; color: inherit;')
+            h3.w3-text-blue(style='font-size: 1.5rem; font-weight: bold;') #{game.name}
+            p(style='margin: 0; font-size: 1rem;')
+              b Open Events:
+              span #{game.openEventCount}
   else
     p There are no games.
-  style.
-    #search, #game-list {
-      z-index: 9999; /* Higher than other elements */
-      position: relative; /* Ensures it's not covered by other fixed elements */
-    }
+
   script(src="/javascripts/scripts.js")
+
+  style.
+    .w3-card-4 {
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Event Card Styles */
+    .w3-card-4 {
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    }
+
+    .w3-card-4:hover {
+      transform: translateY(-5px);
+      box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    .w3-card-4 h3 {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
