--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1.w3-center(style="font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem;")= title
-  input.w3-input.w3-round.w3-border.w3-input-search#search(type="text" placeholder="Search games...")
+  input.w3-input.w3-round.w3-border.w3-input-search#search(type="text" placeholder="Search games..." style="width: 30%; margin: 0 auto; display: block;")
 
   if game_list.length
     ul#game-list(style='list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;')
