kleine spacing issues gefixt

--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -11,7 +11,7 @@ block content
           a(href=game.url style='display: block; text-decoration: none; color: inherit;')
             h3.w3-text-blue(style='font-size: 1.5rem; font-weight: bold;') #{game.name}
             p(style='margin: 0; font-size: 1rem;')
-              b Open Events:
+              b Open Events:&nbsp;
               span #{game.openEventCount}
   else
     p There are no games.
