--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -1,24 +1,32 @@
 extends layout
 
 block content
-  h1.w3-center(style="font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem;")= title
-  input.w3-input.w3-round.w3-border.w3-input-search#search(type="text" placeholder="Search games..." style="width: 30%; margin: 0 auto; display: block;")
+  div.w3-container.w3-padding-32
+    h1.w3-center(style="font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem;")= title
+    input.w3-input.w3-round.w3-border.w3-input-search#search(type="text" placeholder="Search games...")
 
-  if game_list.length
-    ul#game-list(style='list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;')
-      each game in game_list
-        li.w3-card-4.w3-padding.w3-round-large.game-item(style='border: 1px solid #ddd; list-style: none; transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;')
-          a(href=game.url style='display: block; text-decoration: none; color: inherit;')
-            h3.w3-text-blue(style='font-size: 1.5rem; font-weight: bold;') #{game.name}
-            p(style='margin: 0; font-size: 1rem;')
-              b Open Events:
-              span #{game.openEventCount}
-  else
-    p There are no games.
+    if game_list.length
+      ul#game-list(style='list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;')
+        each game in game_list
+          li.w3-card-4.w3-padding.w3-round-large.game-item(style='border: 1px solid #ddd; list-style: none; transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;')
+            a(href=game.url style='display: block; text-decoration: none; color: inherit;')
+              h3.w3-text-blue(style='font-size: 1.5rem; font-weight: bold;') #{game.name}
+              p(style='margin: 0; font-size: 1rem;')
+                b Open Events:
+                span #{game.openEventCount}
+    else
+      p There are no games.
 
   script(src="/javascripts/scripts.js")
 
   style.
+
+    .w3-input-search {
+      width: 50%;
+      margin: 0 auto;
+      display: block;
+    }
+
     .w3-card-4 {
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -37,4 +45,11 @@ block content
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+
+    @media only screen and (max-width: 600px) {
+      .w3-input-search {
+        width: 70%;
+      }
+
     }
