--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -76,3 +76,13 @@ block content
         form(action=`${event.url}/join` method='POST' style='display: inline;')
           button(type='submit' class='w3-button w3-blue w3-hover-light-blue w3-round-large' style='background: none; border: none; cursor: pointer;')
             | Join Event
+  style.
+    @media only screen and (max-width: 600px) {
+      .w3-container .w3-button {
+        display: block;
+        margin: 0 auto;
+        width: 50vw;
+
+        text-align: center;
+      }
+    }
