--- a/views/event_list.pug
+++ b/views/event_list.pug
@@ -32,31 +32,31 @@ block content
       ul(style='list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;')
         each event in event_list
           li.w3-card-4.w3-padding.w3-round-large(style='border: 1px solid #ddd; list-style: none; transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;')
-            h3.w3-text-blue.w3-hover-text-light-blue(style='font-size: 1.5rem; font-weight: bold;')
-              a(href=event.url) #{event.title}
-            p(style='margin: 0; font-size: 1rem;')
-              b Game:&nbsp;
-              span #{event.game.name}
-            if event.date
+            a(href=event.url style='display: block; text-decoration: none; color: inherit;')
+              h3.w3-text-blue.w3-hover-text-light-blue(style='font-size: 1.5rem; font-weight: bold;') #{event.title}
               p(style='margin: 0; font-size: 1rem;')
-                b Date:&nbsp;
-                span #{event.date.toDateString()}
-            else
-              p(style='margin: 0; font-size: 1rem;')
-                b Date:&nbsp;
-                span Not specified
-
-            p(style='margin: 0; font-size: 1rem;')
-              if event.status === 'Available'
-                span.w3-text-green
-                  b Available:&nbsp;
-                  | #{event.participants.length} / #{event.max_size}
-              else if event.status === 'Full'
-                span.w3-text-red
-                  b Full:&nbsp;
-                  | #{event.participants.length} / #{event.max_size}
+                b Game:&nbsp;
+                span #{event.game.name}
+              if event.date
+                p(style='margin: 0; font-size: 1rem;')
+                  b Date:&nbsp;
+                  span #{event.date.toDateString()}
               else
-                span.w3-text-orange #{event.status}
+                p(style='margin: 0; font-size: 1rem;')
+                  b Date:&nbsp;
+                  span Not specified
+
+              p(style='margin: 0; font-size: 1rem;')
+                if event.status === 'Available'
+                  span.w3-text-green
+                    b Available:&nbsp;
+                    | #{event.participants.length} / #{event.max_size}
+                else if event.status === 'Full'
+                  span.w3-text-red
+                    b Full:&nbsp;
+                    | #{event.participants.length} / #{event.max_size}
+                else
+                  span.w3-text-orange #{event.status}
     else
       p.w3-text-gray(style='text-align: center; font-size: 1.2rem; margin-top: 20px;') No events found.
 
