--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -18,7 +18,7 @@ block content
       strong Date:
       span(style='margin-left: 10px;')
         if date
-          | #{date.toDateString()} #{date.toLocaleTimeString()}
+          | #{date.toDateString()} #{date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}
         else
           | Not specified
     p.w3-large
