--- a/views/login.pug
+++ b/views/login.pug
@@ -8,7 +8,6 @@ block content
             body {
                 display: flex;
                 flex-direction: column;
-                min-height: 100vh;
                 margin: 0;
             }
 
@@ -21,6 +20,10 @@ block content
                 justify-content: center;
                 align-items: center;
                 flex-grow: 1;
+                margin: 30px auto;
+                padding: 30px;
+                max-width: 600px; /* Added max-width */
+                box-sizing: border-box; /* Ensure padding is included in the width */
             }
 
             .login-form {
@@ -112,7 +115,7 @@ block content
                 }
             }
 
-        .login-container.w3-display-middle
+        .login-container
             .login-form
 
                 h1 Login
