--- a/views/logout.pug
+++ b/views/logout.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    .logout-container.w3-display-middle
+    .logout-container
 
         .logout-form
             h1 #{title}
