--- a/views/register.pug
+++ b/views/register.pug
@@ -89,7 +89,7 @@ block content
                 text-decoration: underline;
             }
 
-        .register-container.w3-padding-32.w3-display-middle
+        .register-container.w3-padding-32
 
             .register-form
                 h1 Register
