policies zien er beter uit

--- a/views/cookie_policy.pug
+++ b/views/cookie_policy.pug
@@ -54,6 +54,13 @@ block content
             text-decoration: underline;
         }
 
+        @media only screen and (max-width: 600px) {
+            .cookie-container {
+                margin: 60px auto;
+            }
+
+        }
+
     .cookie-container.w3-padding-large
         h1 Cookie Policy
         p This Cookie Policy explains how we use cookies and similar technologies on our website.
