--- a/views/privacy_policy.pug
+++ b/views/privacy_policy.pug
@@ -55,6 +55,13 @@ block content
             text-decoration: underline;
         }
 
+        @media only screen and (max-width: 600px) {
+            .privacy-container {
+                margin: 60px auto;
+            }
+
+        }
+
     .privacy-container.w3-padding-large
         h1 Privacy Policy
         p This Privacy Policy outlines how we collect, use, and protect your personal information in compliance with GDPR.
