--- a/views/terms_of_service.pug
+++ b/views/terms_of_service.pug
@@ -55,6 +55,13 @@ block content
             text-decoration: underline;
         }
 
+        @media only screen and (max-width: 600px) {
+            .terms-container {
+                margin: 60px auto;
+            }
+
+        }
+
     .terms-container
         h1 Terms of Service
         p These Terms of Service govern your use of our website and services. Please read them carefully.
